--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,7 +21,7 @@
             </intent-filter>
         </activity>
 		
-        <activity android:name=".MainActivity"
+        <activity android:name=".main.MainActivity"
                   android:theme="@style/AppTheme.NoActionBar">
         </activity>
 
